test/files/neg/t5106.scala
class A {
  def f {
    val (n, l): (String, Int) = (4, "")
  }
}
